<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="320dp"
        android:layout_height="176dp"
        android:background="@drawable/dialog_bg_round_white"
        android:padding="24dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_invite_title"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:maxLines="2"
            android:gravity="center"
            android:text="@string/live_anchor_invite_audience_join_seats"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@drawable/live_shape_corner_32_bg_white"
                android:text="@string/live_cancel"
                android:textColor="@color/text_primary"
                android:textSize="16sp"/>

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_weight="1"
                android:background="@drawable/live_radius_button_bg"
                android:text="@string/live_sure"
                android:textColor="@color/color_white"
                android:textSize="16sp"
                android:layout_marginStart="16dp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>