<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <!-- 顶部标题栏 -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <!-- 返回按钮 -->
        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/ic_close"/>

        <!-- 标题 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/live_room"
            android:textColor="@color/color_white"
            android:textSize="17sp"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- 房间标题输入框 -->
    <EditText
        android:id="@+id/edt_live_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_edit_text_rounded"
        android:drawableEnd="@drawable/live_icon_edit"
        android:hint="@string/input_room_name"
        android:paddingHorizontal="16dp"
        android:textColor="@color/color_80ffffff"
        android:textColorHint="@color/color_80ffffff"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>

    <!-- 底部功能按钮区域 -->
    <LinearLayout
        android:id="@+id/ll_bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- 功能按钮行 -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/ll_beauty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_beauty"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/live_beauty"
                    android:textColor="@color/white_99"
                    android:textSize="12sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_switch_camera"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/live_switch_camera"
                    android:textColor="@color/white_99"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/icon_tip"
            android:text="@string/live_demo_user_warning"
            android:textColor="@color/white_99"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/btn_start_live"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_button_primary"
            android:text="@string/voiceroom_start_live"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/color_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/live_creating_room"
            android:textColor="@color/color_white"
            android:textSize="14sp"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>