<?xml version="1.0" encoding="utf-8"?><!-- Copyright (c) 2022 NetEase, Inc. All rights reserved. -->
<!-- Use of this source code is governed by a MIT license that can be -->
<!-- found in the LICENSE file. -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
   android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@color/color_white">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="20dp"
        android:paddingTop="12dp"
        android:paddingEnd="20dp"
        android:paddingBottom="12dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/live_apply_link_seat"
            android:textColor="@color/color_black"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"/>


    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#30000000"
        app:layout_constraintTop_toBottomOf="@+id/rl_title"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_self_state"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/live_waiting_bg"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_waiting_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_waiting_confirm"
            android:textColor="@color/color_333333"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <LinearLayout
            android:id="@+id/ll_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_cancel_apply"
                android:textColor="@color/color_337eff"
                android:textSize="14sp"/>

            <ImageView
                android:layout_width="11dp"
                android:layout_height="16dp"
                android:layout_marginStart="4dp"
                android:src="@drawable/ic_arrow_right"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textColor="@color/color_666666"
        android:textSize="12sp"
        android:text="@string/live_waiting_on_seat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_self_state"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_anchor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip"
        app:layout_constraintBottom_toBottomOf="parent"
    />

    <TextView
        android:id="@+id/tv_apply_seat"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/live_radius_button_bg"
        android:gravity="center"
        android:text="@string/live_apply_seat"
        android:textColor="@color/color_white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
